--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Test application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="test.css" /> -->
+    <link rel="stylesheet" type="text/css" media="screen" href="test.css" />
     <script src="test.js"></script>
 </head>
 <body>
